fix(frontend): Adjust styles, alignments
Adjust styling alignments of buttons, paddings, margins, etc.

--- a/src/assets/scss/custom/components/_buttons.scss
+++ b/src/assets/scss/custom/components/_buttons.scss
@@ -97,7 +97,7 @@ a {
 .btn-orange.request-map {
   background-color: #fc9432ff ;
   color: black !important;
-  margin-bottom: 1.7rem;
+  margin-bottom: 1rem;
 }
 
 .full {
